--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .input {
+        @apply rounded-sm text-sm border-transparent bg-sky-100 p-2 outline-none border border-black focus:border-2 placeholder-gray-900
+    }
+}
